# wanLLMDB

./: .env.production.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CODE_REVIEW_PHASE_4.md  DEVELOPMENT_ROADMAP.md  GETTING_STARTED.md  Makefile  OPERATIONS.md  PHASE_1_2_CODE_REVIEW.md  PHASE_1_2_REVIEW_AND_PHASE_3_PLAN.md  PHASE_2_REMAINING_SPRINTS_PLAN.md  PHASE_2_SPRINT_10_11_COMPLETE.md  PHASE_2_SPRINT_12_PART1_COMPLETE.md  PHASE_2_SPRINT_12_PART2_COMPLETE.md  PHASE_2_SPRINT_12_STATUS.md  PHASE_2_SPRINT_5_PROGRESS.md  PHASE_2_SPRINT_6_PROGRESS.md  PHASE_2_SPRINT_7_COMPLETE.md  PHASE_2_SPRINT_8_COMPLETE.md  PHASE_2_SPRINT_9_COMPLETE.md  PHASE_4_PRODUCTION_INFRASTRUCTURE.md  PRODUCTION_DEPLOYMENT.md  PRODUCT_FEATURES.md  PROJECT_PLAN.md  README_PROJECT.md  SECURITY_FIXES_IMPLEMENTED.md  SPRINT_1_SUMMARY.md  SPRINT_2_SUMMARY.md  SPRINT_3_SUMMARY.md  SPRINT_4_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  TECH_STACK_DECISION.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_artifact_tables.py  002_add_sweep_tables.py  003_add_run_files.py  004_add_run_logs.py  005_add_model_registry.py  006_add_artifact_aliases.py  007_add_file_references.py  008_add_performance_indexes.py  009_add_audit_logs.py  010_add_jobs_table.py  011_add_job_queues_and_quotas.py  012_add_vdc_and_clusters.py
backend/app/: main.py
backend/app/api/: deps.py  monitoring.py
backend/app/api/v1/: __init__.py  artifacts.py  audit.py  auth.py  jobs.py  model_registry.py  projects.py  queues.py  run_files.py  run_logs.py  runs.py  sweeps.py  vdcs.py
backend/app/core/: audit.py  config.py  security.py  security_utils.py
backend/app/db/: base.py  base_class.py  database.py
backend/app/executors/: __init__.py  base.py  kubernetes_executor.py  slurm_executor.py
backend/app/models/: artifact.py  audit_log.py  cluster.py  job.py  job_queue.py  model_registry.py  project.py  project_vdc_quota.py  run.py  run_config.py  run_file.py  run_log.py  run_summary.py  sweep.py  user.py  vdc.py
backend/app/repositories/: artifact_repository.py  job_queue_repository.py  job_repository.py  model_registry_repository.py  project_repository.py  run_file_repository.py  run_log_repository.py  run_repository.py  sweep_repository.py  vdc_repository.py
backend/app/scheduling/: __init__.py  policies.py  quota_providers.py  scheduler.py  types.py
backend/app/schemas/: artifact.py  job.py  job_details.py  model_registry.py  project.py  run.py  run_file.py  run_log.py  sweep.py  token.py  user.py  vdc.py
backend/app/services/: job_scheduler.py  optuna_service.py  storage_service.py
backend/app/vdc/: __init__.py  cluster_selector.py  quota_manager.py  vdc_scheduler.py
backend/scripts/: README.md  backup-database.sh  deploy-production.sh  manage-services.sh  restore-database.sh
backend/tests/: __init__.py
backend/tests/performance/: test_query_performance.py
backend/tests/security/: test_credentials.py  test_jwt_blacklist.py  test_password_strength.py  test_rate_limiting.py  test_security_audit.py  test_sql_injection.py  test_ssrf.py
sdk/python/: .gitignore  README.md  pyproject.toml  setup.py
sdk/python/examples/: README.md  artifact_alias_example.py  artifact_example.py  artifact_reference_example.py  context_manager.py  hyperparameter_search.py  model_registry_example.py  pytorch_mnist.py  save_files_example.py  simple_example.py  sweep_example.py
sdk/python/src/wanllmdb/: __init__.py  api_client.py  artifact.py  artifact_cache.py  config.py  errors.py  git_info.py  logging.py  metrics_buffer.py  run.py  (+4 more)
(+96 files in other folders)
